Force favicon update with cache buster

--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <!-- 1. UPDATED FAVICON (Explicit type added to force update) -->
+  <!-- ADD ?v=2 TO THE END OF THE HREF TO FORCE UPDATE -->
   <link rel="icon" type="image/svg+xml"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22 font-family=%22monospace%22 font-weight=%22bold%22 fill=%22%232563eb%22>&lt;/&gt;</text></svg>" />
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22 font-family=%22monospace%22 font-weight=%22bold%22 fill=%22%232563eb%22>&lt;/&gt;</text></svg>?v=2" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- 2. UPDATED TITLE -->
   <title>Smart Task Evaluator</title>
 </head>
 
